--- a/doc/img/fgsmeps.tex
+++ b/doc/img/fgsmeps.tex
@@ -19,20 +19,41 @@
  column 2/.style={nodes={text width=1cm}},
  column 3/.style={nodes={text width=1cm}},
  column 4/.style={nodes={text width=10cm}}] {
-   {Clean Text} & {Label} & {Score} & {Adversarial Text} \\
+   {Clean Text} & {Label} & {WMD} & {Adversarial Text} \\
 
-{This film to me \hl{is} \hl{a} \hl{very} \hl{good} film!  \hl{!} \(<\) br /
-  \(>\) \(<\) br / \(>\) \hl{I} \hl{have} a German Shepherd myself and I wish to
-  god he was \hl{like} Jerry Lee!! I \hl{hope} \hl{too} that there is another
-  K-9 in \hl{the} running!! With Jerry Lee \hl{and} Dooley in them!! \hl{I} do
-  \hl{n't} care what any one \hl{say} \hl{these} \hl{two} films were
-  \hl{excellent} \hl{!}} & {P\(\to\)N} & {3.0859} & {This film to me \hl{be}
-  \hl{another} \hl{so} \hl{bad} film!  \hl{?!}  \(<\) br / \(>\) \(<\) br / \(>\)
-  \hl{n't} \hl{should} a German Shepherd myself and I wish to god he was
-  \hl{n't} Jerry Lee!! I \hl{hoping} \hl{seem} that there is another K-9 in
-  \hl{one} running!! With Jerry Lee \hl{of} Dooley in them!! \hl{'m} do \hl{do}
-  care what any one \hl{saying} \hl{those}
-  \hl{three} films were \hl{good} \hl{?!!}}\\
+   {HOSPITAL CORP \hl{SAYS} IT \hl{RECEIVED} \hl{47} DLR A SHARE OFFER FROM
+     INVESTOR GROUP HOSPITAL CORP \hl{SAYS} IT \hl{RECEIVED} \hl{47} DLR A SHARE
+     OFFER FROM INVESTOR GROUP} & {0\(\to\)1} & {0.2308} & {HOSPITAL CORP
+     \hl{THAN} IT \hl{RESULT} \hl{43} DLR A SHARE OFFER FROM INVESTOR GROUP
+     HOSPITAL CORP \hl{THAN} IT \hl{RESULT} \hl{43} DLR A SHARE OFFER FROM
+     INVESTOR GROUP}\\
+   {\hl{TEXACO} \hl{SEES} BUSINESS LITTLE HIT BY BANKRUPTCY MOVE \hl{Texaco} Inc
+     \hl{\&} \(<\) TX \(>\) said its decision to file \hl{for} protection under
+     Chapter 11 of \hl{the} U . S \hl{.} Bankruptcy code will not affect the
+     majority of its businesses . It said its subsidiaries , which account for
+     96 \hl{pct} of its 32 . 6 billion \hl{dlrs} in revenues \hl{and} 79 pct of
+     its net property , plant \hl{and} equipment , were free of the action
+     . Only parent holding company \hl{,} Texaco Inc \hl{,} and operating
+     subsidiaries , \hl{Texaco} Capital Inc \hl{and} Texaco Capital N . V , are
+     affected , it said . But the company said it was likely to suspend its 75
+     \hl{cents} per share quarterly common stock dividend and halt repayments on
+     \hl{debts} \hl{of} some \hl{6} . 8 billion \hl{dlrs} . Texaco said it filed
+     \hl{for} \hl{Chaper} 11 because suppliers were demanding cash payments and
+     banks were withholding loans as a result of} & {1\(\to\)0} & {0.8327} &
+   {\hl{THUNDERBIRD} \hl{IRENE} BUSINESS LITTLE HIT BY BANKRUPTCY MOVE
+     \hl{Plasticville} Inc \hl{Hardware} \(<\) TX \(>\) said its decision to
+     file \hl{more} protection under Chapter 11 of \hl{first} U . S \hl{....}
+     Bankruptcy code will not affect the majority of its businesses . It said
+     its subsidiaries , which account for 96 \hl{\%} of its 32 . 6 billion
+     \hl{ANTI-BACTERIAL} in revenues \hl{well} 79 pct of its net property ,
+     plant \hl{well} equipment , were free of the action . Only parent holding
+     company \hl{even} Texaco Inc \hl{find} and operating subsidiaries ,
+     \hl{Amoco} Capital Inc \hl{to} Texaco Capital N . V , are affected , it
+     said . But the company said it was likely to suspend its 75 \hl{paying} per
+     share quarterly common stock dividend and halt repayments on \hl{creditor}
+     \hl{part} some \hl{4} . 8 billion \hl{tè} . Texaco said it filed \hl{good}
+     \hl{Reformations} 11 because suppliers were demanding cash
+     payments and banks were withholding loans as a result of}\\
  };
 
 \end{tikzpicture}
